<resources>
    <string name="app_name">MobileRX</string>
    <string name="verified">VERIFY</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="hello_world">Hello world!</string>
    <string name="sigin">SIGN IN</string>
    <string name="debug_option">App Debug Option</string>
    <string name="debug_summary">App Debug Option is Disabled.</string>
    <string name="confirm">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="hintusername">Enter Username</string>
    <string name="hintpasswd">Enter Password</string>
    <string name="next">Next</string>
    <string name="titleadmin">Admin Signup</string>
    <string name="titleipaddress">Server Ipaddress</string>
    <string name="titleurl">Set Main Url</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="ipaddress">Enter Server Ipaddress</string>
    <string name="signup">Signup</string>
    <string name="setup">Setup</string>
    <string name="url">Resource Url</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="wardtitle">WARD LIST</string>
    <string name="ward">Ward: </string>
    <string name="patient_list_title">Patient List</string>
    <string name="user_title">User: </string>
    <string name="patientname">Patient Name</string>
    <string name="bednum">Bed Num</string>
    <string name="encounterID">EncounterID</string>
    <string name="doctor">DoctorName</string>
    <string name="age_gender">Age/Gender</string>
    <string name="admission_date">Admission Date</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bsi">BSI</string>
    <string name="release">RELEASE</string>
    <string name="stop">STOP</string>
    <string name="login">LOG IN</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="title_activity_wardlist">WardlistActivity</string>
    <string name="title_activity_patientlist_acitvity">PatientlistAcitvity</string>
    <string name="title_activity_main_prescription">MainPrescriptionActivity</string>
    <string name="form">FORM</string>
    <string name="route">ROUTE</string>
    <string name="dosage">DOSAGE</string>
    <string name="frequency">FREQUENCY</string>
    <string name="duration">DURATION</string>
    <string name="startdate">STARTDATE</string>
    <string name="starttime">STARTTIME</string>
    <string name="enddate">ENDDATE</string>
    <string name="endtime">ENDTIME</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="medium">MEDIUM</string>
    <string name="medium_dosage">MEDIUM DOSAGE</string>
    <string name="enter_drug_name">Enter Drug Name</string>
    <string name="title_activity_prescribe">PrescribeActivity</string>
    <string name="title_activity_verification_date">VerificationDateActivity</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="title_activity_authorize_prescription">AuthorizePrescription</string>
</resources>
