<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sssihms.hmis.mobilerx.Verification.VerificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/accent_material_light"
        android:id="@+id/mpa_patientinfo">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/encounterID"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:layout_margin="3dp"
            android:id="@+id/mpa_wardname"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/patientname"
            android:layout_margin="3dp"
            android:id="@+id/mpa_patient_name"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/mpa_wardname" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/age_gender"
            android:layout_margin="3dp"
            android:id="@+id/mpa_age_gender"
            android:layout_toEndOf="@+id/mpa_patient_name" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/height"
            android:id="@+id/mpa_height"
            android:layout_alignTop="@+id/mpa_encounter_id"
            android:layout_toEndOf="@+id/mpa_encounter_id" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/weight"
            android:id="@+id/mpa_encounter_id"
            android:layout_below="@+id/mpa_wardname"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/bsi"
            android:id="@+id/mpa_weight"
            android:layout_alignTop="@+id/mpa_height"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/verified"
            android:layout_margin="5dp"
            android:id="@+id/mpa_release"
            android:textColor="@color/my_accent"
            android:background="@drawable/borderwhitebackground"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>
